--- a/responsive.css
+++ b/responsive.css
@@ -3,3 +3,15 @@
         width: 100%;
     }
 }
+
+@media screen and (max-width: 480px){
+    .row{
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .lessons .col {
+        width: 100%;
+    }
+    
+}
