add: media 480px

--- a/responsive.css
+++ b/responsive.css
@@ -13,5 +13,14 @@
     .lessons .col {
         width: 100%;
     }
-    
+    .steps .col{
+        width: 100%;
+    }
+    .why-us .col-left {
+        width: 100%;
+    }
+    .why-us .col-right{
+        width: 100%;
+    }
+
 }
